# tenhou-log-manager

./: .gitignore  LICENSE  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  router.ts  style.css
src-tauri/: .gitignore  Cargo.toml  RADME.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/libs/browser-ls-reader/: Cargo.toml
src-tauri/libs/browser-ls-reader/src/: lib.rs
src-tauri/libs/maj-analyser/: Cargo.toml
src-tauri/libs/maj-analyser/src/: counter.rs  game.rs  lib.rs  yaku.rs
src-tauri/libs/maj-simulator/: Cargo.toml
src-tauri/libs/maj-simulator/src/: lib.rs  single_simulator.rs  utils.rs
src-tauri/libs/pai/: Cargo.toml
src-tauri/libs/pai/src/: btree_count_map.rs  furo.rs  lib.rs  monochromatic.rs  pai.rs  split_into_melds.rs  vec_pai.rs  yaku.rs
src-tauri/libs/shanten-calculator/: Cargo.toml
src-tauri/libs/shanten-calculator/src/: lib.rs  shanten_calculator.rs  ut_map.rs
src-tauri/libs/tenhou-logs-downloader/: Cargo.toml
src-tauri/libs/tenhou-logs-downloader/src/: lib.rs
src-tauri/libs/tenhou-parser/: Cargo.toml
src-tauri/libs/tenhou-parser/src/: event_emitter.rs  lib.rs  maj_event.rs  utils.rs
src-tauri/libs/tensu-calculator/: Cargo.toml
src-tauri/libs/tensu-calculator/src/: lib.rs  yaku_judge.rs
src-tauri/src/: data.rs  import.rs  main.rs
src/components/: DataComponent.vue  LanguageChange.vue  ThemeChange.vue  UserIdConfig.vue
src/i18n/: en-US.yml  index.ts  ja-JP.yml  zh-CN.yml
src/stores/: counter.ts
src/views/: AboutView.vue  DataView.vue  ImportView.vue
