[workspace]
members = ['libs/*']

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Rika"]

[workspace.dependencies]


[package]
name = "tenhou-log-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["Rika"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
browser-ls-reader = { path = "libs/browser-ls-reader" }
tenhou-logs-downloader = { path = "libs/tenhou-logs-downloader" }
maj-analyser = { path = "libs/maj-analyser" }
tenhou-parser = { path = "libs/tenhou-parser" }
tauri-plugin-fs = "2.0.0-beta.11"

