[package]
name = "maj-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
pai = { path = "../pai" }
shanten-calculator = { path = "../shanten-calculator" }
tensu-calculator = { path = "../tensu-calculator" }
strum = { workspace = true }
strum_macros = { workspace = true }
lazy_static = { workspace = true }
memoize = "0.4.2"